@startuml
title Modelo Conceitual de Dados — Ofertas e Candidaturas

hide circle
left to right direction
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam classFontSize 12
skinparam classFontName Arial
skinparam classBorderColor #000000
skinparam classBackgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80

' ======================
' Entidades (conceitual)
' ======================

class Institution {
  id (UUID, PK)
  name (text, obrigatório)
  description (text, opcional) ' adicionado para melhor detalhamento da instituição
  created_at (timestamptz)
  updated_at (timestamptz)
  deleted_at (timestamptz)
  deleted_by (UUID, FK -> User.id, opcional)
  deletion_reason (text, opcional)
}

class Program {
  id (UUID, PK)
  institution_id (UUID, FK -> Institution.id, obrigatório)
  name (text, obrigatório)
  description (text, opcional) ' adicionado para melhor detalhamento do programa
  created_at (timestamptz)
  updated_at (timestamptz)
  deleted_at (timestamptz)
  deleted_by (UUID, FK -> User.id, opcional)
  deletion_reason (text, opcional)
}

class Offer {
  id (UUID, PK)
  institution_id (UUID, FK -> Institution.id, obrigatório)
  program_id (UUID, FK -> Program.id, opcional)
  title (text, obrigatório)  ' adicionado para melhor identificação da oferta
  description (text, opcional) ' adicionado para melhor detalhamento da oferta
  type (enum: course | scholarship | internship)
  status (enum: active | inactive | closed)
  publication_date (timestamptz, obrigatório)
  application_deadline (timestamptz, obrigatório)
  created_at (timestamptz)
  updated_at (timestamptz)
  deleted_at (timestamptz)
  deleted_by (UUID, FK -> User.id, opcional)
  deletion_reason (text, opcional)
}

class User {
  id (UUID, PK)
  email (citext/text, obrigatório, único)
  hashed_password (text, obrigatório)
  institution_id (UUID, FK -> Institution.id, opcional) ' obrigatório quando role=admin
  created_at (timestamptz)
  updated_at (timestamptz)
  deleted_at (timestamptz)
  deleted_by (UUID, FK -> User.id, opcional)
  deletion_reason (text, opcional)
}

class Role {
  id (UUID, PK)
  name (text, único)  ' admin, candidate
  description (text, opcional) ' adicionado para melhor descrição da role
  created_at (timestamptz)
  updated_at (timestamptz)
  deleted_at (timestamptz)
}

class UserRole {
  user_id (UUID, FK -> User.id, PK)
  role_id (UUID, FK -> Role.id, PK)
  created_at (timestamptz)
}

class CandidateProfile {
  id (UUID, PK)
  user_id (UUID, FK -> User.id, obrigatório, único)
  full_name (text, obrigatório)
  date_of_birth (date, opcional*)  ' *não está no enunciado
  cpf (text, opcional*)           ' *não está no enunciado
  created_at (timestamptz)
  updated_at (timestamptz)
  deleted_at (timestamptz)
  deleted_by (UUID, FK -> User.id, opcional)
  deletion_reason (text, opcional)
}

class Application {
  id (UUID, PK)
  candidate_profile_id (UUID, FK -> CandidateProfile.id, obrigatório)
  offer_id (UUID, FK -> Offer.id, obrigatório)
  status (enum - valores a definir)
  created_at (timestamptz)
  updated_at (timestamptz)
  deleted_at (timestamptz)
  deleted_by (UUID, FK -> User.id, opcional)
  deletion_reason (text, opcional)
  ' UNIQUE(candidate_profile_id, offer_id)
}

' ======================
' Consentimento (por candidatura)
' ======================

class Consent {
  id (UUID, PK)
  user_id (UUID, FK -> User.id, obrigatório)
  application_id (UUID, FK -> Application.id, obrigatório)
  scope (text, obrigatório) ' APPLICATION_TERMS | DATA_SHARING | MARKETING | ...
  terms_version (text, obrigatório)
  consented_at (timestamptz, obrigatório)
  revoked_at (timestamptz, opcional)
  ip (inet, opcional)
  user_agent (text, opcional)
  evidence_hash (text, opcional)
  created_at (timestamptz)
  ' UNIQUE(application_id, scope, terms_version) recomendado
}

' ======================
' LGPD / Logging (opcional, mas recomendado pelo desafio)
' ======================

package "LGPD / Audit (optional)" {

  class AuditEvent {
    id (UUID, PK)
    occurred_at (timestamptz, obrigatório)
    actor_user_id (UUID, FK -> User.id, obrigatório)
    action (text, obrigatório) ' ex: OFFER_CREATED, APPLICATION_STATUS_CHANGED
    entity_type (text, obrigatório) ' offer | application | candidate_profile | ...
    entity_id (UUID, obrigatório)
    ip (inet, opcional)
    user_agent (text, opcional)
    request_id (text/uuid, opcional)
    before (jsonb, opcional)
    after (jsonb, opcional)
  }

  class DataAccessLog {
    id (UUID, PK)
    accessed_at (timestamptz, obrigatório)
    actor_user_id (UUID, FK -> User.id, obrigatório)
    data_subject_user_id (UUID, FK -> User.id, opcional) ' titular (quando aplicável)
    action (text, obrigatório) ' READ
    resource (text, obrigatório) ' candidate_profile | applications | ...
    resource_id (UUID, opcional)
    purpose (text, opcional) ' motivo do acesso (suporte, análise, etc.)
    ip (inet, opcional)
    user_agent (text, opcional)
    request_id (text/uuid, opcional)
  }
}

' ======================
' Relacionamentos
' ======================

Institution "1" -- "0..*" Program : owns
Institution "1" -- "0..*" Offer : publishes
Program "1" -- "0..*" Offer : groups

' NOVO: vínculo opcional do usuário à instituição (admin institucional)
Institution "1" -- "0..*" User : has_admins
User "0..1" -- "1" Institution : belongs_to

User "1" -- "0..1" CandidateProfile : has
User "1" -right- "0..*" UserRole
Role "1" -- "0..*" UserRole

CandidateProfile "1" -- "0..*" Application : applies
Offer "1" -- "0..*" Application : receives

' Consent links
User "1" -- "0..*" Consent : gives
Application "1" -down- "0..*" Consent : requires

' LGPD links (auditoria e acesso)
User "1" -- "0..*" AuditEvent : performs
User "1" -- "0..*" DataAccessLog : accesses
User "0..1" -- "0..*" DataAccessLog : is_subject

' ======================
' Notas / Constraints
' ======================

note bottom of Application
  Unique: (candidate_profile_id, offer_id)
end note

note right of Offer
  Constraint: application_deadline > publication_date
end note

note left of User
  Regra: se User possuir role=admin,
  institution_id deve estar preenchido.
  Se role=candidate, institution_id deve ser nulo.
end note

note right of Consent
  Consentimento é contextual à candidatura.
  Pode haver múltiplos consentimentos por Application (escopos distintos).
  Recomendado: UNIQUE(application_id, scope, terms_version).
end note

note bottom of Consent
  Histórico: manter registro mesmo se revogar (revoked_at != null).
end note

note right of CandidateProfile
  Leitura permitida:
  - pelo próprio titular; ou
  - por admin da mesma institution da Offer (via User.institution_id),
    desde que exista Consent ativo para a Application.
end note

note right of AuditEvent
  Append-only: não atualizar/deletar registros.
  Usar para rastrear mudanças em dados e status.
end note

note right of DataAccessLog
  Usar para registrar leitura de dados pessoais,
  especialmente quando actor != titular.
end note

@enduml
